--- a/sass/web/navbar.scss
+++ b/sass/web/navbar.scss
@@ -2,6 +2,239 @@
 @import "../mySassWare/mixin";
 @charset "utf-8";
 
+/*navbar-line10 start*/
+.navbar-wrapper10{
+  $navbarHeight:2.25rem;
+  .webTop {
+    /*也可固定*/
+    /*
+    margin-top: 2.25rem;
+    position: fixed;
+    top: 0;
+    */
+    z-index: 90;
+    -webkit-backface-visibility: hidden;
+    width: 100%;
+    max-width: 640px;
+    height: 0;
+    -webkit-transition: all .4s;
+    -o-transition: all .4s;
+    transition: all .4s;
+  }
+  .webHeaderBox {
+    width: 100%;
+    max-width: 640px;
+    margin: 0 auto;
+    -webkit-backface-visibility: hidden;
+    /*position: fixed;
+    top: 0rem;*/
+    height: $navbarHeight;
+    z-index: 2 ;
+    position: relative;
+    .header{
+      text-align:center;
+      .pageTitle {
+        height: 2.4rem;
+        font-weight: normal;
+        font-size: 1rem;
+        line-height: 2.4rem;
+        -o-text-overflow: ellipsis;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
+        max-width: 76.56125%;
+        display: inline-block;
+        color: #fff;
+        vertical-align: top;
+        padding-right: .25rem;
+        padding-left: .25rem;
+        clear: both;
+        position: relative;
+        z-index: 80;
+      }
+    }
+  }
+
+  .webHeaderBg {
+
+    background-color: $mainColor;
+    -webkit-background-size: cover;
+    background-size: cover;
+    height: 2.25rem;
+    line-height: 2.25rem;
+    border-bottom: 1px rgba(0, 0, 0, 0.1) solid;
+    -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2);
+    -ms-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2);
+    -o-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2);
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2)
+  }
+  .navBaseIcon .navItemIcon {
+    $fontsize:1.5rem;
+    background-repeat: no-repeat;
+    background-repeat: no-repeat;
+    -webkit-background-size: 90% 90%!important;
+    background-size: 90%!important;
+    width: 2rem;
+    height: $fontsize;
+    line-height:1;
+    display: inline-block;
+    vertical-align: middle;
+    margin-left: .5rem;
+    font-size: $fontsize;
+    &.icon-navItemIcon:before {
+      font-size: $fontsize;
+      color: #666;
+    }
+  }
+  .navBaseIcon .navItem a {
+    line-height: 2.75rem;
+    text-align: left
+  }
+
+  .navButton {
+    position: absolute;
+    right: 0;
+    height: 2.25rem;
+    width: 2.5rem;
+    z-index: 100;
+    float: left
+  }
+
+  .navButton .menuNav .menuNavTip {
+    width: 2rem;
+    height: 2rem;
+    float: left;
+    margin: .15rem 0rem .25rem .5rem;
+    font-size: 1.5rem;
+    line-height: 2rem;
+    color: #fff;
+    cursor:pointer;
+  }
+
+  .navbar {
+    background: #fff;
+    height: 100%;
+    overflow-x: hidden;
+    overflow-y: auto;
+    visibility: hidden;
+    display: block;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    -webkit-overflow-scrolling: touch;
+    &.open{
+      visibility: visible;
+      -webkit-backface-visibility: hidden;
+      backface-visibility: hidden
+    }
+  }
+
+
+  .navbar{
+    &.open{
+      .navItem{
+        opacity: 1;
+        -webkit-transform: translateY(0);
+        -ms-transform: translateY(0);
+        transform: translateY(0);
+      }
+    }
+    .navItem {
+      position: relative;
+      background: #fff;
+      border-bottom: 1px solid #ececec;
+      opacity: 0;
+      -webkit-transition: all .4s;
+      -o-transition: all .4s;
+      transition: all .4s;
+      -webkit-transform: translateY(0);
+      -ms-transform: translateY(0);
+      transform: translateY(0);
+      $contentArr:"\e623" "\e60f" "\e70d" "\e82b" "\e606" "\e639";
+      @for $i from 1 through 6{
+        &.navItem_#{$i}{
+          .icon-navItem:before{
+            content:nth($contentArr,$i);
+          }
+
+        }
+      }
+    }
+  }
+
+  .navbar.open .navItem a {
+    visibility: visible;
+  }
+
+  .navBaseIcon .navItem a {
+    line-height: 2.75rem;
+    text-align: left;
+  }
+
+
+  .navbar .navItem a {
+    overflow: hidden;
+    font-size: .75rem;
+    text-decoration: none;
+
+    display: block;
+    position: relative;
+    padding: 0 .5rem;
+    word-break: keep-all;
+    white-space: nowrap;
+    width: auto;
+    min-width: 3rem;
+    max-width: none;
+    font-family: "\5FAE\8F6F\96C5\9ED1", Helvetica, "黑体", Arial, Tahoma;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+
+    height: 2.9rem;
+    color: #333;
+    line-height: 2.9rem;
+    text-align: left;
+    display: block;
+    font-size: .7rem;
+    color: #333;
+    text-decoration: none;
+    font-weight: normal;
+    border-bottom: 0;
+    visibility: hidden;
+  }
+
+  .navbar .itemSelected .icon-navItem{
+    color: $mainColor;
+  }
+  .navItem.itemSelected .navItemName {
+    color: $mainColor;
+  }
+  .navBaseIcon .navItem .navItemName {
+    vertical-align: middle;
+  }
+  .navItem .navItemName {
+    margin: 0 0 0 1rem;
+  }
+  .navbar .itemSelected:after {
+    color: #bb140d;
+  }
+  .navbar .navItem:after {
+    content: "\e619";
+    font-size: 0.9rem;
+    position: absolute;
+    right: .9rem;
+    top: 1rem;
+    color: #666;
+  }
+  $length:80;
+  $start:160;
+  @for $i from 1 through 10{
+    $delay:#{$start + ($i - 1)*$length}ms;
+    .open .navItem:nth-child(#{$i}){-webkit-transition-delay:$delay ;-o-transition-delay: $delay;transition-delay: $delay;}
+  }
+}
+/*navbar-line10 end*/
+
 /* navbar start09 */
 .navBar_wrapper09 {
   $navPt:3px;
